--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "backand"
   ],
   "author": "Riturajsharma",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
