User and video Model

--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 PORT =8000;
+CORS_ORIGIN=*
+
 MONGODB_URL = mongodb+srv://riturajsharmaaimca1:Riturajpass1@cluster0.mvd9i9r.mongodb.net
+
+ACCESS_TOKEN_SECRET =djkgjkffjeiofjfkdcmcioedvfodnf5f5dfdkfdj
+
+ACCESS_TOKEN_EXPIRY= 1d
+
+REFRESH_TOKEN_SECRET =kdfjdkfkdjfkdjdkdfdfdd52322xdfjdd
+
+REFRESH_TOKEN_EXPIRY= 10d
