--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ ACCESS_TOKEN_EXPIRY= 1d
 REFRESH_TOKEN_SECRET =kdfjdkfkdjfkdjdkdfdfdd52322xdfjdd
 
 REFRESH_TOKEN_EXPIRY= 10d
+
+CLOUDINARY_CLOUD_NAME = db9flbgj9
+CLOUDINARY_API_KEY = 988387542493327
+CLOUDINARY_API_SECRET = 3TDsET35WR2oRsJJ1FtW4kttl-c 
