Update env pass

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT =8000
 CORS_ORIGIN=*
 
-MONGODB_URL = mongodb+srv://riturajsharmaaimca1:Riturajpass1@cluster0.mvd9i9r.mongodb.net
+MONGODB_URL = mongodb+srv://riturajsharmaaimca1:<Pass@123>@cluster0.mvd9i9r.mongodb.net
 
 ACCESS_TOKEN_SECRET =djkgjkffjeiofjfkdcmcioedvfodnf5f5dfdkfdj
 
